--- a/EduHomeUI/Areas/EHMasterPanel/Views/Assesment/Create.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Assesment/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels.AssesmentViewModels;
-
+﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels.AssesmentViewModels
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @model AssesmentViewModel
@@ -8,24 +7,23 @@
 }
 
 <div class="row">
-
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">Create course</h4>
-                <form method="post" class="app-search d-none d-lg-block">
+                <h4 class="card-title">Create Assesment</h4>
+                <form method="post">
                     <div class="mb-3 row">
-                        <label asp-for="AssesmentType" for="example-text-input" class="col-md-2 col-form-label">Language</label>
+                        <label asp-for="AssesmentType" class="col-md-2 col-form-label">Assesment</label>
                         <div class="col-md-10">
-                            <input asp-for="AssesmentType" class="form-control" type="text">
+                            <input asp-for="AssesmentType" class="form-control" type="text" id="example-text-input">
                         </div>
                     </div>
 
-                    <div>
-                        <button type="submit" class="btn btn-primary waves-effect waves-light">Create</button>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary">Create</button>
                     </div>
                 </form>
             </div>
         </div>
-    </div> <!-- end col -->
+    </div>
 </div>
