--- a/EduHomeUI/Areas/EHMasterPanel/Views/Language/Create.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Language/Create.cshtml
@@ -1,30 +1,29 @@
-﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels.LanguageViewModels;
-
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels.LanguageViewModels
 @model LanguageViewModel
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
 @{
     ViewData["Title"] = "Create";
 }
 
 <div class="row">
-
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">Create course</h4>
-                <form method="post" class="app-search d-none d-lg-block">
+                <h4 class="card-title">Create Language</h4>
+                <form method="post">
                     <div class="mb-3 row">
-                        <label asp-for="LanguageOption" for="example-text-input" class="col-md-2 col-form-label">Language</label>
+                        <label asp-for="LanguageOption" class="col-md-2 col-form-label">Language</label>
                         <div class="col-md-10">
-                            <input asp-for="LanguageOption" class="form-control" type="text">
+                            <input asp-for="LanguageOption" class="form-control" type="text" id="example-text-input">
                         </div>
                     </div>
 
-                    <div>
-                        <button type="submit" class="btn btn-primary waves-effect waves-light">Create</button>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary">Create</button>
                     </div>
                 </form>
             </div>
         </div>
-    </div> <!-- end col -->
+    </div>
 </div>
