--- a/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
@@ -461,8 +461,8 @@
                                 <li><a asp-controller="CourseCategory" asp-action="Index">Categories</a></li>
                                 <li><a asp-controller="Course" asp-action="Index">Courses</a></li>
                                 <li><a asp-controller="Language" asp-action="Index">Languages</a></li>
-                                <li><a asp-controller="Assesment" asp-action="Create">Assesment</a></li>
-                                <li><a asp-controller="Skill" asp-action="Create">Skills</a></li>
+                                <li><a asp-controller="Assesment" asp-action="Index">Assesment</a></li>
+                                <li><a asp-controller="Skill" asp-action="Index">Skills</a></li>
 
                                 <li><a asp-controller="Events" asp-action="Index">Events</a></li>
                                 <li><a asp-controller="Teachers" asp-action="Index">Teachers</a></li>
