--- a/EduHomeUI/Areas/EHMasterPanel/Views/Skill/Create.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Skill/Create.cshtml
@@ -1,5 +1,4 @@
-﻿
-@using EduHomeUI.Areas.EHMasterPanel.ViewModels.SkillViewModels;
+﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels.SkillViewModels;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @model SkillViewModel
@@ -8,24 +7,23 @@
 }
 
 <div class="row">
-
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">Create course</h4>
-                <form method="post" class="app-search d-none d-lg-block">
+                <h4 class="card-title">Create SkillLevel</h4>
+                <form method="post">
                     <div class="mb-3 row">
-                        <label asp-for="Skill" for="example-text-input" class="col-md-2 col-form-label">Skill</label>
+                        <label asp-for="Skill" class="col-md-2 col-form-label">SkillLevel</label>
                         <div class="col-md-10">
-                            <input asp-for="Skill" class="form-control" type="text">
+                            <input asp-for="Skill" class="form-control" type="text" id="example-text-input">
                         </div>
                     </div>
 
-                    <div>
-                        <button type="submit" class="btn btn-primary waves-effect waves-light">Create</button>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary">Create</button>
                     </div>
                 </form>
             </div>
         </div>
-    </div> <!-- end col -->
+    </div>
 </div>
