--- a/EduHomeUI/Areas/EHMasterPanel/Views/Assesment/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Assesment/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using EduHome.Core.Entities
-@model IEnumerable<Assesment>
+﻿@using EduHomeUI.Areas.EHMasterPanel.ViewModels.AssesmentViewModels;
+@model AssesmentIndexViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <partial name="_Notification" />
 @{
@@ -21,7 +21,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            @foreach (var assesment in Model)
+                            @foreach (var assesment in Model.Assesments)
                             {
                                 <tr>
                                     <td>@count</td>
